--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,17 @@ after_success:
   - docker push tinletinic/multi-nginx
   - docker push tinletinic/multi-server
   - docker push tinletinic/multi-worker
+
+deploy:
+  provider: elasticbeanstalk
+  region: ap-northeast-1
+  app: multi-docker
+  env: MultiDocker-env
+  bucket_name: elasticbeanstalk-ap-northeast-1-979194532510
+  bucket_path: docker-multi
+  on:
+    branch: master
+  access_key_id:
+    secure: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: $AWS_SECRET_KEY
